--- a/scrapbook.html
+++ b/scrapbook.html
@@ -210,33 +210,9 @@
 
     </section>
 
-    <section id="contact" class="s-contact target-section">
+   
 
-        <div class="overlay"></div>
-
-        <div class="row narrow section-intro">
-            <div class="col-full">
-                <h3>How might we work together?</h3>
-                <h1>Contact me.</h1>
-
-                <p>I like to listen.</p>
-            </div>
-        </div>
-        <div class="row contact__main">
-            <div class="col-eight tab-full contact__form">
-              <h4 class="h06">Send me an email</h4>
-              <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A">me@dum3bi.com</a></p>
-            </div>
-            <div class="col-four tab-full contact__infos">
-              <h4 class="h06">Call me</h4>
-              <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
-            </div>
-        </div>
-
-
-    </section> <!-- end s-contact -->
-
-    <!-- footer
+   <!-- footer
     ================================================== -->
     <footer>
       <div class="row">
@@ -253,7 +229,7 @@
                 </a></li>
                 <li><a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener">
                     <i class="im im-twitter" aria-hidden="true"></i>
-                    <span>Twitter</span>
+                    <span>twitter</span>
                 </a></li>
                   <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                       <i class="im im-github" aria-hidden="true"></i>
@@ -265,23 +241,23 @@
           </div>
       </div>
 
-            <div class="row footer-bottom">
+      <div class="row footer-bottom">
 
-                <div class="col-twelve">
-                  <div class="copyright">
-                    <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
-                    <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Deployed via <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
-                    <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
-                  </div>
+          <div class="col-twelve">
+              <div class="copyright">
+                <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
+                <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Deployed via <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
+                <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
+              </div>
 
-                    <div class="go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
-                    </div>
-                </div>
+              <div class="go-top">
+              <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
+              </div>
+          </div>
 
-            </div> <!-- end footer-bottom -->
+      </div> <!-- end footer-bottom -->
 
-        </footer> <!-- end footer -->
+  </footer> <!-- end footer -->
 
 
         <div id="preloader">
