add best things of 2023

--- a/2023_year_in_review.html
+++ b/2023_year_in_review.html
@@ -151,6 +151,30 @@
                     </div>
 
                     <div>
+                      <H2>Best Things of 2023</H2>
+                      <p>The best of 2023, determined by me and based only on my opinions (these are not necessarily content produced in 2023.)</p>
+                      <ul>
+                       <li><b>Best Book:</b> High Output Management by Andrew Grove</li>
+                       <li><b>Best Investment:</b> My Inverter for power backup which has provided me with constant power supply.</li>
+                       <li><b>Best Mobile App:</b> Risevest</li>
+                       <li><b>Best Game:</b> Genshin Impact</li>
+                       <li><b>Best Newsletter:</b> Proof of Concept by David Hoang</li>
+                       <li><b>Best Podcast:</b> 99% Invisible by Roman Mars</li>
+                       <li><b>Best Podcast Episode:</b> 'Jesus' on Founders podcast by David Sendra</li>
+                       <li><b>Best Gift Given:</b> Gifted Adenike an Apple Watch Series 8 for her birthday</li>
+                       <li><b>Best Gift Recieved:</b> A Carton of Capri-Sun from Adenike for Christmas</li>
+                       <li><b>Best Decision:</b> Focus mode, I now use focus mode on all my devices and turn off most notification especially for social media apps. This has reduced distractions and enabled me do more focused work</li>
+                       <li><b>Best TV Show:</b> Young Sheldon</li>
+                       <li><b>Best Movie:</b> John Wick: Chapter 4</li>
+                       <li><b>Best Documentary:</b> Danish Design (1961)</li>
+                       <li><b>Best Meme:</b> God Abeg meme by Ufot Ubon</li>
+                       <li><b>Best Quote:</b> “Indifference towards people and the reality in which they live is actually the one and only cardinal sin in design” -Dieter Rams</li>
+                       <li><b>Best Article:</b> A Paystack Friendship by Fuad</li>
+                       
+                       </ul>
+                    </div>
+
+                    <div>
                       <H2>2024 plans</H2>
                       <p>A few things I’d like to do and experience more of in the new year;
                       </p>
