--- a/2023_year_in_review.html
+++ b/2023_year_in_review.html
@@ -121,7 +121,7 @@
                        <li>Adenike and I celebrated five years together as a couple and one year married</li>
                        <li>Spoke at a conference and a couple of events and twitter spaces this year</li>
                        <li>Held 144 mentorship sessions for free on ADPList</li>
-                       <li>Was recognised five times by ADPList as a top 1% Mentor on ADPList (February, March, July November & December)</li>
+                       <li>Was recognised five times by ADPList as a top 1% Mentor on ADPList (February, March, July, November & December)</li>
                        <li>Graduated from Dribbble's Design System Course by Dan Mall. Learnt so much about design system workflows, tools, documentation and governance.</li>
                        <li>Got a Free 5G Broadband Router from MTN</li>
                        <li>Spent quality time with my family</li>
