--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                 <div class="home-bio">
                 <h2>As a design manager, I bring over a decade of design expertise in Advertising, Data, Marketing, and Media.</h1>
                  <!-- <h2>I was previously Head of Design at Big Cabal Media and an Art Director at Webcoupers and Isobar. </h1> -->
-                
+                   
+                    <h1>
+                        <a href="/me.html" class=" btn btn--primary">More About Me</a> 
+                        <h1>
             </div>
              </div>
 
