add product to experience

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 Head of Design at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
                 
                 <div class="home-bio">
-                <h2>As a design manager, I bring over a decade of design expertise in Advertising, Data, Marketing, and Media.</h1>
+                <h2>As a design manager, I bring over a decade of design expertise in Advertising, Data, Marketing, Media, and Product.</h1>
                  <!-- <h2>I was previously Head of Design at Big Cabal Media and an Art Director at Webcoupers and Isobar. </h1> -->
                    
                     <h1>
