--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 
              <div class="home-content__buttons">
                <h1>
-                 Hi 👋🏼, I'm Dumebi, <br>
+                 Hi 👋🏼, <br>
+                  I'm Dumebi Iwuchukwu, <br>
                 Head of Design at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
                 
                 <div class="home-bio">
