up date picture

--- a/me.html
+++ b/me.html
@@ -102,7 +102,7 @@
               </h1>
 
               <div>
-                  <p><img src="images/hero-bg.jpg" alt="Dumebi iwuchukwu picture"></p>
+                  <p><img src="images/Dumebi-Iwuchukwu.webp" alt="Dumebi iwuchukwu picture"></p>
               </div>
 
               <div >
