--- a/2026_Book_Recommendations.html
+++ b/2026_Book_Recommendations.html
@@ -24,13 +24,13 @@
 
    <meta property="og:url" content="https://www.dum3bi.com/">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Dumebi Iwuchukwu | Art Director.">
-   <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
+   <meta property="og:title" content="Dumebi Iwuchukwu | Book Recommendations.">
+   <meta property="og:description" content="This list draws inspiration from my personal MBA curriculum and is designed to be a comprehensive resource. Feel free to explore and select books that align with your interests and needs.">
    <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
    <meta property="og:image:alt" content="Dumebi's logo">
    <meta name="twitter:card" content="summary_large_image">
-   <meta name="twitter:title" content="Dumebi Iwuchukwu">
-   <meta name="twitter:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
+   <meta name="twitter:title" content="Dumebi Iwuchukwu | Book Recommendations">
+   <meta name="twitter:description" content="This list draws inspiration from my personal MBA curriculum and is designed to be a comprehensive resource. Feel free to explore and select books that align with your interests and needs.">
    <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
    <meta property="og:type" content="website">
