--- a/2026_Book_Recommendations.html
+++ b/2026_Book_Recommendations.html
@@ -102,7 +102,7 @@
           <div class="col-full blog-content__main">
 
             <h1 class="page-header__title">
-              My Book Recommendations
+              Book Recommendations
             </h1>
 
  <div >
